--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   messagingSenderId: "250911007432",
   appId: "1:250911007432:web:b9e9674f6535f6c5a97bfd"
 };
+console.log("Esta base de datos pertenece a Nicolás Arce")
   // Inicia Firebase
   firebase.initializeApp(firebaseConfig);
 </script>
